Updating for Jul 31 stream

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -11,8 +11,8 @@
     <div class="overlay">
       <div class="camera"></div>
       <div class="bottom">
-        <h1>Benjamin Lannon | July 24, 2019</h1>
-        <h2>Today: Gatsby Theme dev</h2>
+        <h1>Benjamin Lannon | July 31, 2019</h1>
+        <h2>Today: Gatsby Docs Features & Repo Triaging</h2>
       </div>
     </div>
   </body>
