--- a/main.html
+++ b/main.html
@@ -20,8 +20,8 @@
   <body>
     <div class="overlay">
       <div class="bottom">
-        <h1>Benjamin Lannon | July 31, 2019</h1>
-        <h2>Today: Gatsby Docs Features & Repo Triaging</h2>
+        <h1>Benjamin Lannon | August 14, 2019</h1>
+        <h2>Today: GitHub Actions Beta 2 exploration</h2>
       </div>
     </div>
   </body>
