--- a/fullscreen.html
+++ b/fullscreen.html
@@ -11,8 +11,8 @@
     <div class="overlay">
       <div class="camera"></div>
       <div class="bottom">
-        <h1>Benjamin Lannon | August 21, 2019</h1>
-        <h2>Today: GitHub API Exploration for Gatsby-GitHub-Stats</h2>
+        <h1>Benjamin Lannon | September 4, 2019</h1>
+        <h2>Today: GitHub Actions development</h2>
       </div>
     </div>
   </body>
