--- a/main.html
+++ b/main.html
@@ -20,8 +20,8 @@
   <body>
     <div class="overlay">
       <div class="bottom">
-        <h1>Benjamin Lannon | August 21, 2019</h1>
-        <h2>Today: GitHub API Exploration for Gatsby-GitHub-Stats</h2>
+        <h1>Benjamin Lannon | September 4, 2019</h1>
+        <h2>Today: GitHub Actions development</h2>
       </div>
     </div>
   </body>
