--- a/fullscreen.html
+++ b/fullscreen.html
@@ -11,8 +11,8 @@
     <div class="overlay">
       <div class="camera"></div>
       <div class="bottom">
-        <h1>Benjamin Lannon | September 4, 2019</h1>
-        <h2>Today: GitHub Actions development</h2>
+        <h1>Benjamin Lannon | September 11, 2019</h1>
+        <h2>Today: Gatsby Site Showcase Validator Dashboard brainstorming</h2>
       </div>
     </div>
   </body>
