--- a/main.html
+++ b/main.html
@@ -20,8 +20,8 @@
   <body>
     <div class="overlay">
       <div class="bottom">
-        <h1>Benjamin Lannon | September 11, 2019</h1>
-        <h2>Today: Gatsby Site Showcase Validator Dashboard brainstorming</h2>
+        <h1>Benjamin Lannon | September 18, 2019</h1>
+        <h2>Today: Gatsby Themes exploration & discussion</h2>
       </div>
     </div>
   </body>
