Updating for Oct 2 stream

--- a/main.html
+++ b/main.html
@@ -20,8 +20,8 @@
   <body>
     <div class="overlay">
       <div class="bottom">
-        <h1>Benjamin Lannon | September 25, 2019</h1>
-        <h2>Today: Gatsby Site Showcase Validator expansions</h2>
+        <h1>Benjamin Lannon | October 2, 2019</h1>
+        <h2>Today: October Grab bag</h2>
       </div>
     </div>
   </body>
