--- a/fullscreen.html
+++ b/fullscreen.html
@@ -11,8 +11,8 @@
     <div class="overlay">
       <div class="camera"></div>
       <div class="bottom">
-        <h1>Benjamin Lannon | October 2, 2019</h1>
-        <h2>Today: October Grab bag</h2>
+        <h1>Benjamin Lannon | October 9, 2019</h1>
+        <h2>Today: OSS Shennanigans</h2>
       </div>
     </div>
   </body>
