--- a/fullscreen.html
+++ b/fullscreen.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <div class="overlay">
-      <div class="camera"></div>
-      <div class="bottom">
-        <h1>Benjamin Lannon | October 30, 2019</h1>
-        <h2>Today: GitHub Actions Resource Site development</h2>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Document</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <div class="overlay">
+    <div class="camera"></div>
+    <div class="bottom">
+      <h1>Benjamin Lannon | November 27, 2019</h1>
+      <h2>Today: Live Coders Twitch dataset exploration</h2>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
