--- a/main.html
+++ b/main.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css" />
-    <style>
-      .bottom {
-        height: 180px;
-        border-top: 20px solid #ae90da;
-      }
 
-      .bottom h1 {
-        margin-top: 10px;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="overlay">
-      <div class="bottom">
-        <h1>Benjamin Lannon | October 30, 2019</h1>
-        <h2>Today: GitHub Actions Resource Site development</h2>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Document</title>
+  <link rel="stylesheet" href="styles.css" />
+  <style>
+    .bottom {
+      height: 180px;
+      border-top: 20px solid #ae90da;
+    }
+
+    .bottom h1 {
+      margin-top: 10px;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="overlay">
+    <div class="bottom">
+      <h1>Benjamin Lannon | November 27, 2019</h1>
+      <h2>Today: Live Coders Twitch dataset exploration</h2>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
