--- a/main.html
+++ b/main.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+    <style>
+      .bottom {
+        height: 180px;
+        border-top: 20px solid #ae90da;
+      }
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Document</title>
-  <link rel="stylesheet" href="styles.css" />
-  <style>
-    .bottom {
-      height: 180px;
-      border-top: 20px solid #ae90da;
-    }
+      .bottom h1 {
+        margin-top: 10px;
+      }
+    </style>
+  </head>
 
-    .bottom h1 {
-      margin-top: 10px;
-    }
-  </style>
-</head>
-
-<body>
-  <div class="overlay">
-    <div class="bottom">
-      <h1>Benjamin Lannon | November 27, 2019</h1>
-      <h2>Today: Live Coders Twitch dataset exploration</h2>
+  <body>
+    <div class="overlay">
+      <div class="bottom">
+        <h1>Benjamin Lannon | Dec. 18, 2019</h1>
+        <h2>Today: Advent of Code & Live Coders Twitch dataset exploration</h2>
+      </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
