Popup stream on Dec 24

--- a/main.html
+++ b/main.html
@@ -21,8 +21,8 @@
   <body>
     <div class="overlay">
       <div class="bottom">
-        <h1>Benjamin Lannon | Dec. 18, 2019</h1>
-        <h2>Today: Advent of Code & Live Coders Twitch dataset exploration</h2>
+        <h1>Benjamin Lannon | Dec. 24, 2019</h1>
+        <h2>Today (Chill Stream): Live Coders Twitch dataset exploration</h2>
       </div>
     </div>
   </body>
