Updating overlay for 2020

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -10,10 +10,11 @@
 
   <body>
     <div class="overlay">
-      <div class="camera"></div>
       <div class="bottom">
-        <h1>Benjamin Lannon | Dec. 24, 2019</h1>
-        <h2>Today (Chill Stream): Live Coders Twitch dataset exploration</h2>
+        <h1>Benjamin Lannon | January 1, 2020</h1>
+        <h2>
+          Today: Live Coders Twitch Data Analysis - Heatmaps (Cont.)
+        </h2>
       </div>
     </div>
   </body>
