--- a/main.html
+++ b/main.html
@@ -7,22 +7,25 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
     <style>
-      .bottom {
-        height: 180px;
-        border-top: 20px solid #ae90da;
-      }
-
-      .bottom h1 {
-        margin-top: 10px;
+      .camera {
+        box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.75);
+        width: 512px;
+        height: 288px;
+        position: absolute;
+        right: 20px;
+        top: 20px;
       }
     </style>
   </head>
 
   <body>
     <div class="overlay">
+      <div class="camera"></div>
       <div class="bottom">
-        <h1>Benjamin Lannon | Dec. 24, 2019</h1>
-        <h2>Today (Chill Stream): Live Coders Twitch dataset exploration</h2>
+        <h1>Benjamin Lannon | January 1, 2020</h1>
+        <h2>
+          Today: Live Coders Twitch Data Analysis - Heatmaps (Cont.)
+        </h2>
       </div>
     </div>
   </body>
