Fix brb and getting started screens

--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -7,15 +7,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
     <style>
+      .container {
+        width: 1920px;
+        height: 1080px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #d9e2ec;
+        color: #243b53;
+      }
+
       h1 {
-        margin-left: 30px;
         font-size: 8em;
-        margin-bottom: 40px;
       }
     </style>
   </head>
   <body>
-    <div class="overlay">
+    <div class="container">
       <h1>Getting Started</h1>
     </div>
   </body>
