Update for Jan 8 stream

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -11,9 +11,9 @@
   <body>
     <div class="overlay">
       <div class="bottom">
-        <h1>Benjamin Lannon | January 1, 2020</h1>
+        <h1>Benjamin Lannon | January 8, 2020</h1>
         <h2>
-          Today: Live Coders Twitch Data Analysis - Heatmaps (Cont.)
+          Today: Live Coders Twitch Data Analysis
         </h2>
       </div>
     </div>
