Update for Feb 12

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -11,9 +11,9 @@
   <body>
     <div class="overlay">
       <div class="bottom">
-        <h1>Benjamin Lannon | Feb 5, 2020</h1>
+        <h1>Benjamin Lannon | Feb 12, 2020</h1>
         <h2>
-          Today: Live Coders Twitch Data Analysis
+          Today: Live Coders Website
         </h2>
       </div>
     </div>
