--- a/main.html
+++ b/main.html
@@ -22,9 +22,9 @@
     <div class="overlay">
       <div class="camera"></div>
       <div class="bottom">
-        <h1>Benjamin Lannon | Feb 5, 2020</h1>
+        <h1>Benjamin Lannon | Feb 12, 2020</h1>
         <h2>
-          Today: Live Coders Twitch Data Analysis
+          Today: Live Coders Website
         </h2>
       </div>
     </div>
