Update for Feb 19 stream

--- a/main.html
+++ b/main.html
@@ -22,9 +22,9 @@
     <div class="overlay">
       <div class="camera"></div>
       <div class="bottom">
-        <h1>Benjamin Lannon | Feb 12, 2020</h1>
+        <h1>Benjamin Lannon | Feb 19, 2020</h1>
         <h2>
-          Today: Live Coders Website
+          Today: WASM? ImageMagick in the browser
         </h2>
       </div>
     </div>
