--- a/fullscreen.html
+++ b/fullscreen.html
@@ -11,9 +11,9 @@
   <body>
     <div class="overlay">
       <div class="bottom">
-        <h1>Benjamin Lannon | Feb 12, 2020</h1>
+        <h1>Benjamin Lannon | Feb 19, 2020</h1>
         <h2>
-          Today: Live Coders Website
+          Today: WASM? ImageMagick in the browser
         </h2>
       </div>
     </div>
