Update for Mar 4 stream

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -13,7 +13,7 @@
       <div class="bottom">
         <h1>Benjamin Lannon | Feb 19, 2020</h1>
         <h2>
-          Today: WASM? ImageMagick in the browser
+          Today: LiveCoders Site - Member page generation script
         </h2>
       </div>
     </div>
