--- a/main.html
+++ b/main.html
@@ -22,9 +22,9 @@
     <div class="overlay">
       <div class="camera"></div>
       <div class="bottom">
-        <h1>Benjamin Lannon | March 4, 2020</h1>
+        <h1>Benjamin Lannon | March 11, 2020</h1>
         <h2>
-          Today: LiveCoders Site - Member page generation script
+          Today: LiveCoders Site
         </h2>
       </div>
     </div>
