--- a/fullscreen.html
+++ b/fullscreen.html
@@ -11,9 +11,9 @@
   <body>
     <div class="overlay">
       <div class="bottom">
-        <h1>Benjamin Lannon | March 11, 2020</h1>
+        <h1>Benjamin Lannon | March 25, 2020</h1>
         <h2>
-          Today: LiveCoders Site
+          Today: MDX-Deck theming
         </h2>
       </div>
     </div>
