--- a/main.html
+++ b/main.html
@@ -22,9 +22,9 @@
     <div class="overlay">
       <div class="camera"></div>
       <div class="bottom">
-        <h1>Benjamin Lannon | April 1, 2020</h1>
+        <h1>Benjamin Lannon | April 8, 2020</h1>
         <h2>
-          Today: MDX-Deck theming
+          Today: Lannonbr.com Development Session
         </h2>
       </div>
     </div>
