Update overlay for May 13 stream

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -11,9 +11,9 @@
   <body>
     <div class="overlay">
       <div class="bottom">
-        <h1>Benjamin Lannon | April 8, 2020</h1>
+        <h1>Benjamin Lannon | May 13, 2020</h1>
         <h2>
-          Today: Lannonbr.com Development Session
+          Today: Removing PrismJS from clientside bundle
         </h2>
       </div>
     </div>
