--- a/main.html
+++ b/main.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="styles.css" />
     <style>
       .camera {
-        box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.75);
         width: 512px;
         height: 288px;
         position: absolute;
@@ -22,9 +21,9 @@
     <div class="overlay">
       <div class="camera"></div>
       <div class="bottom">
-        <h1>Benjamin Lannon | April 8, 2020</h1>
+        <h1>Benjamin Lannon | May 13, 2020</h1>
         <h2>
-          Today: Lannonbr.com Development Session
+          Today: Removing PrismJS from clientside bundle
         </h2>
       </div>
     </div>
