update overlay again

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -13,7 +13,7 @@
       <div class="bottom">
         <h1>Benjamin Lannon | May 13, 2020</h1>
         <h2>
-          Today: Removing PrismJS from clientside bundle
+          Today: Removing PrismJS from Gatsby client-side bundle
         </h2>
       </div>
     </div>
